apps/metrics/alertmanager/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager-httproute
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system
  hostnames:
    - alertmanager.home.alden.ai
  rules:
  - backendRefs:
    - name: alertmanager-main
      port: 9093
